--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,3 +1,101 @@
 appname = ojweb
 httpport = 8080
 runmode = dev
+
+# 系统名称
+site_name = 在线调研系统
+
+# 超级管理员用户密码，密码采用md5加密
+admin_user = admin
+admin_realname = 超级管理员
+admin_pass = 21232f297a57a5a743894a0e4a801fc3
+# 上传文件夹
+uploads_dir = uploads
+
+#enablehttplisten = true
+#httpaddr=
+#httpport=8080
+#enablehttptls=false
+#httpsport=10443
+#httpcertfile=
+#httpkeyfile=
+#httpservertimeout=0
+#runmode=dev #dev prod test
+#autorender=true
+#recoverpanic=true
+#viewspath=views
+
+sessionon = true
+
+#sessionprovider=memory
+#sessionname=beegosessionID
+#sessiongcmaxlifetime=3600
+#sessionsavepath=
+#sessionhashfunc=sha1
+#sessionhashkey=
+#sessioncookielifetime=3600
+#usefcgi=false
+#maxmemory=1<<26
+#enablegzip=false
+
+#directoryindex=true
+
+#beegoservername=beego
+
+enableadmin = true
+adminhttpaddr = localhost
+adminhttpport = 8088
+
+#templateleft = {$
+#templateright= $}
+
+#errorsshow=true
+
+#enablexsrf = true
+#xsrfkey = beegoxsrf
+#xsrfexpire = 3600
+
+#flashname=BEEGO_FLASH
+#flashseperator=BEEGOFLASH
+#staticdir=static  # download:down download2:down2
+
+#enabledocs=false
+#appconfigprovider=ini #xml yaml json
+
+[dev]
+httpport = 8080
+[prod]
+httpport = 8080
+[test]
+httpport = 8888
+
+#[db]
+#tableprefix = oj_
+
+# sql查询日志打印
+#orm_debug = true
+
+# mysql
+#host = 61.132.94.43
+#port = 33060
+#user = survey
+#pass = 3y5N2H5NM56LzQha
+#name = survey
+#type = mysql
+
+# postgresql
+#host = localhost
+#port = 5432
+#user = kevin
+#pass = nohacker
+#name = survey
+#type = postgres
+#sslmode = disable
+
+# sqlite3
+# path = ./
+# name = survey
+# type = sqlite3
+
+# [conf]
+
